added KNNBasline and SVD predictions

--- a/src/KNNBaseline_surprise.ipynb
+++ b/src/KNNBaseline_surprise.ipynb
@@ -96,8 +96,43 @@
     "note: run on Leonhard cluster (20 cores and 22GB mem) <br/>\n",
     "cv=10\n",
     "\n",
+    "0.990511947895\n",
+    "{'k': 237, 'sim_options': {'name': 'pearson_baseline', 'shrinkage': 279, 'user_based': True}}\n",
+    "\n",
+    "0.9905256316\n",
+    "{'k': 244, 'sim_options': {'name': 'pearson_baseline', 'shrinkage': 256, 'user_based': True}}\n",
+    "\n",
+    "0.990541323231\n",
+    "{'k': 283, 'sim_options': {'name': 'pearson_baseline', 'shrinkage': 489, 'user_based': True}}\n",
+    "\n",
+    "0.990582491183\n",
+    "{'k': 303, 'sim_options': {'name': 'pearson_baseline', 'shrinkage': 396, 'user_based': True}}\n",
+    "\n",
+    "0.990559809349\n",
+    "{'k': 287, 'sim_options': {'name': 'pearson_baseline', 'shrinkage': 420, 'user_based': True}}\n",
+    "\n",
+    "0.990600352326\n",
+    "{'k': 239, 'sim_options': {'name': 'pearson_baseline', 'shrinkage': 455, 'user_based': True}}\n",
+    "\n",
+    "0.990620245289\n",
+    "{'k': 286, 'sim_options': {'name': 'pearson_baseline', 'shrinkage': 285, 'user_based': True}}\n",
+    "\n",
+    "0.990653184151\n",
+    "{'k': 215, 'sim_options': {'name': 'pearson_baseline', 'shrinkage': 254, 'user_based': True}}\n",
+    "\n",
+    "0.990740953266\n",
+    "{'k': 269, 'sim_options': {'name': 'pearson_baseline', 'shrinkage': 293, 'user_based': True}}\n",
+    "\n",
+    "------\n",
+    "\n",
     "0.990745916194\n",
     "{'k': 190, 'sim_options': {'name': 'pearson_baseline', 'shrinkage': 191, 'user_based': True}}\n",
+    "\n",
+    "0.990751578428\n",
+    "{'k': 175, 'sim_options': {'name': 'pearson_baseline', 'shrinkage': 166, 'user_based': True}}\n",
+    "\n",
+    "0.990777929504\n",
+    "{'k': 174, 'sim_options': {'name': 'pearson_baseline', 'shrinkage': 159, 'user_based': True}}\n",
     "\n",
     "0.9907865737\n",
     "{'k': 174, 'sim_options': {'name': 'pearson_baseline', 'shrinkage': 144, 'user_based': True}}\n",
@@ -208,7 +243,7 @@
     {
      "data": {
       "text/plain": [
-       "<surprise.prediction_algorithms.knns.KNNBaseline at 0x10a7e5550>"
+       "<surprise.prediction_algorithms.knns.KNNBaseline at 0x1025fb0f0>"
       ]
      },
      "execution_count": 3,
@@ -218,12 +253,12 @@
    ],
    "source": [
     "# choose optimal params from above\n",
-    "# {'k': 190, 'sim_options': {'name': 'pearson_baseline', 'shrinkage': 191, 'user_based': True}}\n",
+    "# {'k': 237, 'sim_options': {'name': 'pearson_baseline', 'shrinkage': 279, 'user_based': True}}\n",
     "sim_options = {'name': 'pearson_baseline',\n",
-    "               'shrinkage': 191,\n",
+    "               'shrinkage': 279,\n",
     "               'user_based': True\n",
     "               }\n",
-    "algo = KNNBaseline(k=190, sim_options=sim_options)\n",
+    "algo = KNNBaseline(k=237, sim_options=sim_options)\n",
     "\n",
     "# train \n",
     "algo.fit(data.build_full_trainset())"
@@ -245,7 +280,7 @@
     {
      "data": {
       "text/plain": [
-       "Prediction(uid=36, iid=0, r_ui=3.0, est=3.237701191883628, details={'actual_k': 186, 'was_impossible': False})"
+       "Prediction(uid=36, iid=0, r_ui=3.0, est=3.2370282594995112, details={'actual_k': 186, 'was_impossible': False})"
       ]
      },
      "execution_count": 4,
@@ -294,17 +329,17 @@
      "output_type": "stream",
      "text": [
       "Id,Prediction\n",
-      "r37_c1,3.237701\n",
-      "r73_c1,2.961849\n",
-      "r156_c1,3.718130\n",
-      "r160_c1,3.312480\n",
-      "r248_c1,3.266307\n",
+      "r37_c1,3.237028\n",
+      "r73_c1,2.963425\n",
+      "r156_c1,3.719131\n",
+      "r160_c1,3.311598\n",
+      "r248_c1,3.266735\n",
       "r25\n"
      ]
     }
    ],
    "source": [
-    "output = helpers.write_submission(ratings, 'submission_surprise_KNNBaseline_0.csv')\n",
+    "output = helpers.write_submission(ratings, 'submission_surprise_KNNBaseline_1.csv')\n",
     "print(output[0:100])"
    ]
   },
