--- a/src/SVD_surprise.ipynb
+++ b/src/SVD_surprise.ipynb
@@ -47,7 +47,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -71,7 +71,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -129,11 +129,46 @@
     "note: run on Leonhard cluster (20 cores and 22GB mem)\n",
     "cv=10\n",
     "\n",
+    "0.9872175653005135\n",
+    "{'lr_bi': 0.006088703690766571, 'lr_bu': 0.012744554096322995, 'lr_pu': 0.012380073174962966, 'lr_qi': 0.009130873179651982, 'n_factors': 158, 'reg_bi': 0.012919509150189782, 'reg_bu': 0.036795609500178635, 'reg_pu': 0.10361453028270178, 'reg_qi': 0.048785998289016745}\n",
+    "\n",
+    "0.9882588317180945\n",
+    "{'lr_bi': 0.005572132295112126, 'lr_bu': 0.010459976354655289, 'lr_pu': 0.012621031473530591, 'lr_qi': 0.009189138000229718, 'n_factors': 81, 'reg_bi': 0.09508515857935072, 'reg_bu': 0.08100593615106191, 'reg_pu': 0.08560885565821767, 'reg_qi': 0.06136778252645429}\n",
+    "\n",
+    "0.9889400786056195\n",
+    "{'lr_bi': 0.00505521532063321, 'lr_bu': 0.012181115620042492, 'lr_pu': 0.0094679873549249, 'lr_qi': 0.00612337262019204, 'n_factors': 108, 'reg_bi': 0.023237810934149287, 'reg_bu': 0.09931980200620626, 'reg_pu': 0.07865295413390713, 'reg_qi': 0.04964170302513018}\n",
+    "\n",
+    "0.9894911251394463\n",
+    "{'lr_bi': 0.006439713022658003, 'lr_bu': 0.005220730820427025, 'lr_pu': 0.012121360196274768, 'lr_qi': 0.010296116770652414, 'n_factors': 98, 'reg_bi': 0.07326008897853639, 'reg_bu': 0.0654521219387276, 'reg_pu': 0.07673672028564435, 'reg_qi': 0.07732908168371602}\n",
+    "\n",
+    "-----\n",
+    "\n",
+    "0.992159817137\n",
+    "{'lr_all': 0.0088540357639887227, 'n_factors': 94, 'reg_all': 0.060980144283391415}\n",
+    "\n",
+    "0.9922037152942101\n",
+    "{'lr_all': 0.009404839806784696, 'n_factors': 83, 'reg_all': 0.06361145065359476}\n",
+    "\n",
+    "0.9923411994233705\n",
+    "{'lr_all': 0.009518436883800755, 'n_factors': 98, 'reg_all': 0.06448898038350545}\n",
+    "\n",
+    "0.996356760492\n",
+    "{'lr_all': 0.0069735838056049675, 'n_factors': 16, 'reg_all': 0.040538641816816053}\n",
+    "\n",
+    "\n",
     "0.996617863993\n",
     "{'lr_all': 0.0080655611939959484, 'n_epochs': 19, 'n_factors': 9, 'reg_all': 0.042201220509606799}\n",
     "\n",
+    "0.996918766638\n",
+    "{'lr_all': 0.010438622204618025, 'n_factors': 16, 'reg_all': 0.069969144045048129}\n",
+    "\n",
+    "-----\n",
+    "\n",
     "0.998777808857\n",
     "{'n_factors': 5}\n",
+    "\n",
+    "0.999721712849\n",
+    "{'lr_all': 0.0048483945439183485, 'n_factors': 9}\n",
     "\n",
     "1.00085021593\n",
     "{'lr_all': 0.0035314408264436933, 'n_epochs': 19, 'n_factors': 50, 'reg_all': 0.027105037999075404}\n",
@@ -157,24 +192,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "<surprise.prediction_algorithms.matrix_factorization.SVD at 0x10f07c128>"
+       "<surprise.prediction_algorithms.matrix_factorization.SVD at 0x1077890b8>"
       ]
      },
-     "execution_count": 19,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "# choose optimal params from above\n",
-    "#algo = SVD(n_epochs=19, lr_all=0.0080655611939959484, reg_all=0.042201220509606799, n_factors=9)\n",
-    "algo = SVD( n_factors=5)\n",
+    "# {'lr_all': 0.0088540357639887227, 'n_factors': 94, 'reg_all': 0.060980144283391415}\n",
+    "algo = SVD( n_factors=94, lr_all=0.0088540357639887227, reg_all=0.060980144283391415)\n",
     "\n",
     "# train \n",
     "algo.fit(data.build_full_trainset())"
@@ -190,16 +225,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "Prediction(uid=36, iid=0, r_ui=3.0, est=3.175193448906952, details={'was_impossible': False})"
+       "Prediction(uid=36, iid=0, r_ui=3.0, est=3.06228862478507, details={'was_impossible': False})"
       ]
      },
-     "execution_count": 20,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -221,7 +256,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -237,7 +272,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -245,17 +280,17 @@
      "output_type": "stream",
      "text": [
       "Id,Prediction\n",
-      "r37_c1,3.175193\n",
-      "r73_c1,3.022989\n",
-      "r156_c1,3.743569\n",
-      "r160_c1,3.393022\n",
-      "r248_c1,3.336667\n",
+      "r37_c1,3.062289\n",
+      "r73_c1,3.028338\n",
+      "r156_c1,3.621378\n",
+      "r160_c1,3.142890\n",
+      "r248_c1,3.368381\n",
       "r25\n"
      ]
     }
    ],
    "source": [
-    "output = helpers.write_submission(ratings, 'submission_surprise_SVD_1.csv')\n",
+    "output = helpers.write_submission(ratings, 'submission_surprise_SVD_2.csv')\n",
     "print(output[0:100])"
    ]
   },
