--- a/src/SVD_surprise.ipynb
+++ b/src/SVD_surprise.ipynb
@@ -129,8 +129,35 @@
     "note: run on Leonhard cluster (20 cores and 22GB mem)\n",
     "cv=10\n",
     "\n",
+    "0.98489843593\n",
+    "{'lr_bi': 0.0043688979424132048, 'lr_bu': 0.005613464182452876, 'lr_pu': 0.022148955075059311, 'lr_qi': 0.012530626289208299, 'n_factors': 151, 'reg_bi': 0.042342905803236859, 'reg_bu': 0.073415041823889998, 'reg_pu': 0.12513844856777867, 'reg_qi': 0.060228735604464054}\n",
+    "\n",
+    "0.984953534195\n",
+    "{'lr_bi': 0.0040080904244357771, 'lr_bu': 0.0083752718099860367, 'lr_pu': 0.010813216008005243, 'lr_qi': 0.018992188100229335, 'n_factors': 158, 'reg_bi': 0.02384386240305832, 'reg_bu': 0.087957272220067495, 'reg_pu': 0.17370665665508969, 'reg_qi': 0.042977558957037719}\n",
+    "\n",
+    "0.9853091859177997\n",
+    "{'lr_bi': 0.0050565201838808, 'lr_bu': 0.005529901817482, 'lr_pu': 0.021009781711363945, 'lr_qi': 0.019237920706921686, 'n_factors': 153, 'reg_bi': 0.027507293418947705, 'reg_bu': 0.04792231303919493, 'reg_pu': 0.1051659555261933, 'reg_qi': 0.05739791764348274}\n",
+    "\n",
+    "0.985423383238\n",
+    "{'lr_bi': 0.0045872175952940859, 'lr_bu': 0.0059198576112051132, 'lr_pu': 0.03996299827445985, 'lr_qi': 0.012744793911701359, 'n_factors': 156, 'reg_bi': 0.039006956026578499, 'reg_bu': 0.058835165460011773, 'reg_pu': 0.065999449644116956, 'reg_qi': 0.11943136846519176}\n",
+    "\n",
+    "0.98576635754\n",
+    "{'lr_bi': 0.004388787077144584, 'lr_bu': 0.0077070689204476878, 'lr_pu': 0.037207361664974598, 'lr_qi': 0.011526606878613951, 'n_factors': 155, 'reg_bi': 0.055491394820528769, 'reg_bu': 0.025510174666992846, 'reg_pu': 0.073005652506841268, 'reg_qi': 0.084369830119022798}\n",
+    "\n",
+    "0.985920828862\n",
+    "{'lr_bi': 0.0061067123779277675, 'lr_bu': 0.005972391928230663, 'lr_pu': 0.023802281518036983, 'lr_qi': 0.016117532546202691, 'n_factors': 157, 'reg_bi': 0.013775300394299965, 'reg_bu': 0.034301808303089626, 'reg_pu': 0.09627118462747386, 'reg_qi': 0.061245371260615522}\n",
+    "\n",
+    "0.986355638337\n",
+    "{'lr_bi': 0.0053921528073649578, 'lr_bu': 0.014983628487378223, 'lr_pu': 0.025070307435290061, 'lr_qi': 0.0073965320227803123, 'n_factors': 154, 'reg_bi': 0.027365169456015866, 'reg_bu': 0.03585534141987403, 'reg_pu': 0.15019357711020351, 'reg_qi': 0.050166823853083298}\n",
+    "\n",
+    "0.986851655568\n",
+    "{'lr_bi': 0.0053647824382532638, 'lr_bu': 0.0052769550628727633, 'lr_pu': 0.012545946659482476, 'lr_qi': 0.012795461232426109, 'n_factors': 156, 'reg_bi': 0.056418600300998704, 'reg_bu': 0.022556567389521144, 'reg_pu': 0.061086848339968164, 'reg_qi': 0.077168605512323629}\n",
+    "\n",
     "0.9872175653005135\n",
     "{'lr_bi': 0.006088703690766571, 'lr_bu': 0.012744554096322995, 'lr_pu': 0.012380073174962966, 'lr_qi': 0.009130873179651982, 'n_factors': 158, 'reg_bi': 0.012919509150189782, 'reg_bu': 0.036795609500178635, 'reg_pu': 0.10361453028270178, 'reg_qi': 0.048785998289016745}\n",
+    "\n",
+    "0.988058743973\n",
+    "{'lr_bi': 0.0045634712043475644, 'lr_bu': 0.01064562075669161, 'lr_pu': 0.012470219046795966, 'lr_qi': 0.0069239309430058314, 'n_factors': 160, 'reg_bi': 0.038064835563680136, 'reg_bu': 0.083204917488220814, 'reg_pu': 0.044129727640422105, 'reg_qi': 0.083532754108250978}\n",
     "\n",
     "0.9882588317180945\n",
     "{'lr_bi': 0.005572132295112126, 'lr_bu': 0.010459976354655289, 'lr_pu': 0.012621031473530591, 'lr_qi': 0.009189138000229718, 'n_factors': 81, 'reg_bi': 0.09508515857935072, 'reg_bu': 0.08100593615106191, 'reg_pu': 0.08560885565821767, 'reg_qi': 0.06136778252645429}\n",
@@ -198,7 +225,7 @@
     {
      "data": {
       "text/plain": [
-       "<surprise.prediction_algorithms.matrix_factorization.SVD at 0x1077890b8>"
+       "<surprise.prediction_algorithms.matrix_factorization.SVD at 0x10806cd30>"
       ]
      },
      "execution_count": 3,
@@ -208,8 +235,8 @@
    ],
    "source": [
     "# choose optimal params from above\n",
-    "# {'lr_all': 0.0088540357639887227, 'n_factors': 94, 'reg_all': 0.060980144283391415}\n",
-    "algo = SVD( n_factors=94, lr_all=0.0088540357639887227, reg_all=0.060980144283391415)\n",
+    "# {'lr_bi': 0.0043688979424132048, 'lr_bu': 0.005613464182452876, 'lr_pu': 0.022148955075059311, 'lr_qi': 0.012530626289208299, 'n_factors': 151, 'reg_bi': 0.042342905803236859, 'reg_bu': 0.073415041823889998, 'reg_pu': 0.12513844856777867, 'reg_qi': 0.060228735604464054}\n",
+    "algo = SVD(n_factors=151, lr_bi=0.0043688979424132048, lr_bu=0.005613464182452876, lr_pu=0.022148955075059311, lr_qi=0.012530626289208299, reg_bi=0.042342905803236859, reg_bu=0.073415041823889998, reg_pu=0.12513844856777867, reg_qi=0.060228735604464054)\n",
     "\n",
     "# train \n",
     "algo.fit(data.build_full_trainset())"
@@ -231,7 +258,7 @@
     {
      "data": {
       "text/plain": [
-       "Prediction(uid=36, iid=0, r_ui=3.0, est=3.06228862478507, details={'was_impossible': False})"
+       "Prediction(uid=36, iid=0, r_ui=3.0, est=3.332676908676297, details={'was_impossible': False})"
       ]
      },
      "execution_count": 4,
@@ -280,17 +307,17 @@
      "output_type": "stream",
      "text": [
       "Id,Prediction\n",
-      "r37_c1,3.062289\n",
-      "r73_c1,3.028338\n",
-      "r156_c1,3.621378\n",
-      "r160_c1,3.142890\n",
-      "r248_c1,3.368381\n",
+      "r37_c1,3.332677\n",
+      "r73_c1,3.129160\n",
+      "r156_c1,3.778833\n",
+      "r160_c1,3.352926\n",
+      "r248_c1,3.466300\n",
       "r25\n"
      ]
     }
    ],
    "source": [
-    "output = helpers.write_submission(ratings, 'submission_surprise_SVD_2.csv')\n",
+    "output = helpers.write_submission(ratings, 'submission_surprise_SVD_3.csv')\n",
     "print(output[0:100])"
    ]
   },
