tried embeddings with keras

--- a/src/SVD_surprise.ipynb
+++ b/src/SVD_surprise.ipynb
@@ -47,7 +47,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -71,7 +71,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -192,16 +192,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "<surprise.prediction_algorithms.matrix_factorization.SVD at 0x1077890b8>"
+       "<surprise.prediction_algorithms.matrix_factorization.SVD at 0x7fa8d9928f60>"
       ]
      },
-     "execution_count": 3,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -209,8 +209,8 @@
    "source": [
     "# choose optimal params from above\n",
     "# {'lr_all': 0.0088540357639887227, 'n_factors': 94, 'reg_all': 0.060980144283391415}\n",
-    "algo = SVD( n_factors=94, lr_all=0.0088540357639887227, reg_all=0.060980144283391415)\n",
-    "\n",
+    "#algo = SVD( n_factors=94, lr_all=0.0088540357639887227, reg_all=0.060980144283391415)\n",
+    "algo = SVD(lr_bi=0.0040080904244357771, lr_bu=0.0083752718099860367, lr_pu=0.010813216008005243, lr_qi=0.018992188100229335, n_factors=158, reg_bi=0.02384386240305832, reg_bu=0.087957272220067495, reg_pu=0.17370665665508969, reg_qi=0.042977558957037719)\n",
     "# train \n",
     "algo.fit(data.build_full_trainset())"
    ]
@@ -225,16 +225,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "Prediction(uid=36, iid=0, r_ui=3.0, est=3.06228862478507, details={'was_impossible': False})"
+       "Prediction(uid=36, iid=0, r_ui=3.0, est=3.354090397008914, details={'was_impossible': False})"
       ]
      },
-     "execution_count": 4,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -256,7 +256,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -272,7 +272,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -280,11 +280,11 @@
      "output_type": "stream",
      "text": [
       "Id,Prediction\n",
-      "r37_c1,3.062289\n",
-      "r73_c1,3.028338\n",
-      "r156_c1,3.621378\n",
-      "r160_c1,3.142890\n",
-      "r248_c1,3.368381\n",
+      "r37_c1,3.354090\n",
+      "r73_c1,3.157447\n",
+      "r156_c1,3.726154\n",
+      "r160_c1,3.346005\n",
+      "r248_c1,3.480498\n",
       "r25\n"
      ]
     }
@@ -318,7 +318,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.5"
+   "version": "3.5.2"
   }
  },
  "nbformat": 4,
