add new SVD predictions + taylermittchel approach

--- a/src/SVD_surprise.ipynb
+++ b/src/SVD_surprise.ipynb
@@ -225,7 +225,7 @@
     {
      "data": {
       "text/plain": [
-       "<surprise.prediction_algorithms.matrix_factorization.SVD at 0x10806cd30>"
+       "<surprise.prediction_algorithms.matrix_factorization.SVD at 0x114828ef0>"
       ]
      },
      "execution_count": 3,
@@ -235,8 +235,8 @@
    ],
    "source": [
     "# choose optimal params from above\n",
-    "# {'lr_bi': 0.0043688979424132048, 'lr_bu': 0.005613464182452876, 'lr_pu': 0.022148955075059311, 'lr_qi': 0.012530626289208299, 'n_factors': 151, 'reg_bi': 0.042342905803236859, 'reg_bu': 0.073415041823889998, 'reg_pu': 0.12513844856777867, 'reg_qi': 0.060228735604464054}\n",
-    "algo = SVD(n_factors=151, lr_bi=0.0043688979424132048, lr_bu=0.005613464182452876, lr_pu=0.022148955075059311, lr_qi=0.012530626289208299, reg_bi=0.042342905803236859, reg_bu=0.073415041823889998, reg_pu=0.12513844856777867, reg_qi=0.060228735604464054)\n",
+    "# {'lr_bi': 0.0050565201838808, 'lr_bu': 0.005529901817482, 'lr_pu': 0.021009781711363945, 'lr_qi': 0.019237920706921686, 'n_factors': 153, 'reg_bi': 0.027507293418947705, 'reg_bu': 0.04792231303919493, 'reg_pu': 0.1051659555261933, 'reg_qi': 0.05739791764348274}\n",
+    "algo = SVD(n_factors=153, lr_bi=0.0050565201838808, lr_bu=0.005529901817482, lr_pu=0.021009781711363945, lr_qi=0.019237920706921686, reg_bi=0.027507293418947705, reg_bu=0.04792231303919493, reg_pu=0.1051659555261933, reg_qi=0.05739791764348274)\n",
     "\n",
     "# train \n",
     "algo.fit(data.build_full_trainset())"
@@ -258,7 +258,7 @@
     {
      "data": {
       "text/plain": [
-       "Prediction(uid=36, iid=0, r_ui=3.0, est=3.332676908676297, details={'was_impossible': False})"
+       "Prediction(uid=36, iid=0, r_ui=3.0, est=3.3600191959191252, details={'was_impossible': False})"
       ]
      },
      "execution_count": 4,
@@ -307,17 +307,17 @@
      "output_type": "stream",
      "text": [
       "Id,Prediction\n",
-      "r37_c1,3.332677\n",
-      "r73_c1,3.129160\n",
-      "r156_c1,3.778833\n",
-      "r160_c1,3.352926\n",
-      "r248_c1,3.466300\n",
+      "r37_c1,3.360019\n",
+      "r73_c1,3.073280\n",
+      "r156_c1,3.804047\n",
+      "r160_c1,3.404724\n",
+      "r248_c1,3.511845\n",
       "r25\n"
      ]
     }
    ],
    "source": [
-    "output = helpers.write_submission(ratings, 'submission_surprise_SVD_3.csv')\n",
+    "output = helpers.write_submission(ratings, 'submission_surprise_SVD_4.csv')\n",
     "print(output[0:100])"
    ]
   },
