fixed error in NCF_3.ipynb

--- a/src/NCF_fenris.ipynb
+++ b/src/NCF_fenris.ipynb
@@ -411,7 +411,7 @@
    "source": [
     "callbacks = [EarlyStopping('val_loss', patience=2), \n",
     "             ModelCheckpoint('model_weights.h5', save_best_only=True)]\n",
-    "history = model.fit([Users, Movies], Ratings, nb_epoch=30, validation_split=.1, verbose=2, callbacks=callbacks)"
+    "history = model.fit([Users, Movies], Ratings, nb_epoch=30, validation_split=.2, verbose=2, callbacks=callbacks)"
    ]
   },
   {
@@ -427,12 +427,12 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "loss = pd.DataFrame({'epoch': [ i + 1 for i in history.epoch ],\n",
-    "                     'training': [ math.sqrt(loss) for loss in history.history['loss'] ],\n",
-    "                     'validation': [ math.sqrt(loss) for loss in history.history['val_loss'] ]})\n",
-    "ax = loss.ix[:,:].plot(x='epoch', figsize={7,10}, grid=True)\n",
-    "ax.set_ylabel(\"root mean squared error\")\n",
-    "ax.set_ylim([0.0,3.0]);"
+    "#loss = pd.DataFrame({'epoch': [ i + 1 for i in history.epoch ],\n",
+    " #                    'training': [ math.sqrt(loss) for loss in history.history['loss'] ],\n",
+    " #                    'validation': [ math.sqrt(loss) for loss in history.history['val_loss'] ]})\n",
+    "#ax = loss.ix[:,:].plot(x='epoch', figsize={7,10}, grid=True)\n",
+    "#ax.set_ylabel(\"root mean squared error\")\n",
+    "#ax.set_ylim([0.0,3.0]);"
    ]
   },
   {
